work in progress, converting til Graph SDK 6