@@ -1,13 +1,15 @@
 plugins {
-    id 'org.springframework.boot' version '3.1.4'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.3.3'
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
-    id 'groovy'
+    //id 'groovy'
 }
 
 group = 'no.fintlabs'
 version = '0.0.1-SNAPSHOT'
-//sourceCompatibility = '17'
+java {
+    sourceCompatibility = '21'
+}
 
 configurations {
     compileOnly {
@@ -37,8 +39,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.90.Final:osx-aarch_64'
 
-    implementation 'com.azure:azure-identity:1.11.0'
-    implementation 'com.microsoft.graph:microsoft-graph:6.14.0'
+    implementation 'com.azure:azure-identity:1.13.2'
+    implementation 'com.microsoft.graph:microsoft-graph:6.15.0'
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
 
@@ -59,10 +61,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'cglib:cglib-nodep:3.3.0'
+    testImplementation 'org.projectlombok:lombok'
     testImplementation 'org.spockframework:spock-spring:2.3-groovy-3.0'
     testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
